# aoc-2024

./: Cargo.toml
rp-src/: Cargo.toml
rp-src/.cargo/: config.toml
src/: Cargo.toml  main.rs
src/days/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  mod.rs
src/src/: main.rs
src/src/days/: day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day5.rs  day6.rs  day8.rs  day9.rs  mod.rs
